2013-11-11  Basic  <simsong@Mucha.local>

	* src/be13_api/Makefile.defs: moved word_and_context_list.* from bulk_extractor to be13_api

	* src/be13_api/feature_recorder.cpp (feature_recorder::feature_recorder): now has reference to feature_recorder_set

	* src/stand.cpp (main): replaced manual histogram generator in stand with call to phase_histogram in be13::plugin

2013-11-08  Basic  <simsong@Mucha.local>

	* src/be13_api/bulk_extractor_i.h (be13): added proper #ifdefs for each type

2013-11-05  Basic  <simsong@mucha.local.tld>

	* src/be13_api/feature_recorder_set.h (class feature_recorder_set): more functions were made virtual and more instance values were made private

2013-10-26  Basic  <simsong@Mucha.local>

	* src/be13_api/bulk_extractor_i.h: process_packet_info renamed to process_packet.

	* src/be13_api/sbuf.h (class sbuf_t): removed pos0_t from map_file because it can be inferred.

2013-09-27  Basic  <simsong@ncr.nps.edu>

	* python/bulk_extractor_reader.py (BulkReport): changed .imagefile() to .image_filename

	* python/identify_filenames.py: changed .imagefile to .image_filename
2013-10-22  Basic  <simsong@Mucha.local>

	* configure.ac: updated for C++ and MacOS Mavericks. Changed version to 1.4.2

2013-10-15  Basic  <simsong@Mucha.local>

	* src/main.cpp (main): removed BULK_EXTRACTOR_DEBUG.

2013-10-08  Basic  <simsong@npsair.local>

	* src/scan_net.cpp (p): removed packetset (no longer used)

	* src/be13_api/sbuf.h (stoi64): stoi() removed because it is part of stdc11

2013-10-08  Simson Garfinkel  <simsong@npsair.local>

	* src/be13_api/feature_recorder.h (f): removed tags

2013-10-07  Basic  <simsong@arlington-38-68-232-163.ncr.vt.edu>

	* src/be13_api/plugin.cpp (plugin::phase_histogram): cleaned up printing of newlines during histogram output printing.

	* src/be13_api/feature_recorder.cpp (feature_recorder::write): replace substr with in-place resize

2013-10-07  Basic  <simsong@npsair.local>
