@@ -79,8 +79,6 @@ bulk_extractor_nomain = \
 	bulk_extractor.h \
 	dig.cpp \
 	dig.h \
-	histogram.cpp \
-	histogram.h \
 	image_process.cpp \
 	image_process.h \
 	pattern_scanner.cpp \
@@ -106,9 +104,7 @@ stand_SOURCES = \
 	histogram.h \
 	scan_bulk.cpp \
 	stand.cpp \
-	word_and_context_list.cpp \
-	word_and_context_list.h \
-	$(BE13_API)
+	$(BE13_API) $(DFXML_WRITER) 
 
 beapi_demo_SOURCES = beapi_demo.cpp
 
